# documentos

./: .gitignore  Makefile  Makefile.python  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
archive/: markdown_tables.py  yaml_block.py
en/: config.common.toml  config.common.yaml  config.html.single.toml  config.html.single.yaml  config.html.toml  config.html.yaml  config.pdf.toml  config.pdf.yaml
en/css/: tbw.css  tbw.syntax-highlight.css
en/documents/: ch0_0_preamble.md  ch0_1_images.md  ch0_2_equations.md  ch0_3_tables.md  ch0_4_sections.md  commands.md  documentos_system.md  index.md  md_doc_system.md  pandoc.md  python.md  repo_setup.md  sites.lst  toml_configuration.md  yaml_configuration.md
en/templates/: common.pandoc.yaml  html.pandoc.yaml  html.yaml  pdf.pandoc.yaml
md_docs/: common.py  document.py  document_validation.py  markdown.py  markdown_classifiers.py  markdown_tables.py  pandoc.py  validation.py
md_docs/archive/: archive functions.py  merge.py  separate.py
mddocs/: common.py  pandoc.py
samples/configuration/: config.ignore.toml  config.ignore.yaml  config.toml  config.yaml
samples/plugins/: plugins.py
src/documentos/: __init__.py
src/documentos/documentos/: markdown.py  validation.py
src/documentos/plugins/: json_plugins.py  nav_plugins.py  toc_plugins.py
src/documentos/tools/: build.py  common.py  docs.py  graph.py  html.py  pdf.py  plugins.py  repair.py  stats.py  validate.py
src/md_docs/: __init__.py  common.py  document.py  document_validation.py  markdown.py  markdown_classifiers.py  pandoc.py  validation.py
src/md_docs/archive/: archive functions.py
src/md_docs/md_docs/: common.py  document.py  document_validation.py  markdown.py  markdown_classifiers.py  validation.py
src/md_docs/plugins/: nav_plugins.py  toc_plugins.py
src/md_docs/tools/: build.py  docs.py  graph.py  html.py  pdf.py  plugins.py  repair.py  stats.py  validate.py
src/md_docs/tools/archive/: yaml_block.py
src/plugins/: __init__.py  toc_plugins.py
src/tools/: build.py  common.py  docs.py  graph.py  html.py  pdf.py  repair.py  stats.py  validate.py  yaml_block.py
src/tools/archive/: yaml_block.py
tests/: test_common.py  test_markdown.py  test_md_classifiers.py  test_pandoc.py
tools/: build.py  common.py  docs.py  graph.py  html.py  pdf.py  repair.py  stats.py  validate.py  yaml_block.py
tools/archive/: archive_collection.py
