# -----------
# SPDX-License-Identifier: MIT
# Copyright (c) 2021 Troy Williams

# uuid  : 3baafeee-c55b-11eb-89d4-2b25ce317bad
# author: Troy Williams
# email : troy.williams@bluebill.net
# date  : 2021-06-04
# -----------

[metadata]
name = documentos
version = 0.0.1
author = Troy Williams
author_email = troy.williams@bluebill.net
license = MIT
description = Build tools and Common Utilities for Markdown/Pandoc document system.
url = https://github.com/TroyWilliams3687/md_docs
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
install_requires =
    appdirs
    click
    matplotlib
    networkx
    pandoc-eqnos
    pandoc-fignos
    pandoc-secnos
    pandoc-tablenos
    pyyaml
    requests
    rich
    rich
    toml
    tzdata
include_package_data = True
python_requires = >=3.9

# https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    build=documentos.tools.build:main
    docs=documentos.tools.docs:main